--- a/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/RegistreerLuchthaven.fxml
+++ b/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/RegistreerLuchthaven.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -55,8 +56,12 @@
                   </Label>
                   <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <RadioButton fx:id="jaRadioButton" mnemonicParsing="false" text="Ja" />
-                        <RadioButton fx:id="neeRadioButton" mnemonicParsing="false" text="Nee" />
+                        <RadioButton fx:id="jaRadioButton" mnemonicParsing="false" text="Ja">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="werkplaats" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="neeRadioButton" mnemonicParsing="false" text="Nee" toggleGroup="$werkplaats" />
                      </children>
                      <HBox.margin>
                         <Insets />
