--- a/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/RegistreerLuchthaven.fxml
+++ b/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/RegistreerLuchthaven.fxml
@@ -31,7 +31,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="41.0" prefWidth="215.0">
                <children>
-                  <TextField fx:id="naamTextfield" alignment="CENTER_RIGHT">
+                  <TextField fx:id="naamTextField" alignment="CENTER_RIGHT">
                      <HBox.margin>
                         <Insets right="10.0" />
                      </HBox.margin>
@@ -71,7 +71,7 @@
             </HBox>
             <HBox alignment="CENTER_LEFT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="41.0" prefWidth="215.0">
                <children>
-                  <TextField fx:id="codeTextfield" alignment="CENTER_RIGHT">
+                  <TextField fx:id="landCodeTextField" alignment="CENTER_RIGHT">
                      <HBox.margin>
                         <Insets right="10.0" />
                      </HBox.margin>
