--- a/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/RegistreerLuchthaven.fxml
+++ b/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/RegistreerLuchthaven.fxml
@@ -1,104 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="310.0" prefWidth="470.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.userInterfaceLaag.RegistreerLuchthavenController">
+<AnchorPane prefHeight="395.0" prefWidth="607.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.userInterfaceLaag.RegistreerLuchthavenController">
    <children>
-      <HBox layoutX="30.0" layoutY="10.0" prefHeight="40.0" prefWidth="430.0">
+      <Button fx:id="buttonOK" layoutX="511.0" layoutY="338.0" mnemonicParsing="false" onAction="#ok" prefHeight="30.0" prefWidth="70.0" text="OK" />
+      <Button fx:id="buttonCancel" layoutX="420.0" layoutY="338.0" mnemonicParsing="false" onAction="#cancel" prefHeight="30.0" prefWidth="70.0" text="Cancel" />
+      <HBox alignment="CENTER_LEFT" layoutX="420.0" layoutY="27.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="40.0" prefWidth="167.0" AnchorPane.rightAnchor="20.0">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="215.0">
-               <children>
-                  <Label text="Land">
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin>
-                  </Label>
-                  <ComboBox fx:id="landComboBox" onAction="#landNaam" prefWidth="150.0">
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin>
-                  </ComboBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="41.0" prefWidth="215.0">
-               <children>
-                  <TextField fx:id="landCodeTextField" alignment="CENTER_RIGHT" editable="false">
-                     <HBox.margin>
-                        <Insets right="10.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <Label text="Code">
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-            </HBox>
-         </children>
-      </HBox>
-      <HBox layoutX="30.0" layoutY="50.0" prefHeight="40.0" prefWidth="430.0">
-         <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="215.0" spacing="50.0">
-               <children>
-                  <Label prefHeight="18.0" prefWidth="140.0" text="Werkplaats">
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin>
-                  </Label>
-                  <VBox prefHeight="200.0" prefWidth="100.0">
-                     <children>
-                        <RadioButton fx:id="jaRadioButton" mnemonicParsing="false" text="Ja">
-                           <toggleGroup>
-                              <ToggleGroup fx:id="werkplaats" />
-                           </toggleGroup>
-                        </RadioButton>
-                        <RadioButton fx:id="neeRadioButton" mnemonicParsing="false" text="Nee" toggleGroup="$werkplaats" />
-                     </children>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </VBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" nodeOrientation="RIGHT_TO_LEFT" prefHeight="41.0" prefWidth="215.0">
-               <children>
-                  <TextField fx:id="naamTextField" alignment="CENTER_RIGHT" onKeyTyped="#naam">
-                     <HBox.margin>
-                        <Insets right="10.0" />
-                     </HBox.margin>
-                  </TextField>
-                  <Label text="Naam">
-                     <HBox.margin>
-                        <Insets left="5.0" />
-                     </HBox.margin>
-                  </Label>
-               </children>
-            </HBox>
-         </children>
-      </HBox>
-      <Button fx:id="buttonOK" layoutX="307.0" layoutY="274.0" mnemonicParsing="false" onAction="#ok" prefHeight="30.0" prefWidth="70.0" text="OK" />
-      <Button fx:id="buttonCancel" layoutX="390.0" layoutY="274.0" mnemonicParsing="false" onAction="#cancel" prefHeight="30.0" prefWidth="70.0" text="Cancel" />
-      <HBox alignment="CENTER_LEFT" layoutX="14.0" layoutY="90.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="41.0" prefWidth="215.0">
-         <children>
-            <TextField fx:id="codeTextField" alignment="CENTER_RIGHT" onKeyTyped="#code">
+            <TextField fx:id="landCodeTextField" alignment="CENTER_RIGHT" editable="false" prefHeight="30.0" prefWidth="102.0" style="-fx-background-color: light gray; -fx-border-color: gray;">
                <HBox.margin>
                   <Insets right="10.0" />
                </HBox.margin>
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
             </TextField>
             <Label text="Code">
                <HBox.margin>
                   <Insets left="5.0" />
                </HBox.margin>
             </Label>
+         </children>
+      </HBox>
+      <TitledPane animated="false" collapsible="false" layoutX="69.0" layoutY="75.0" prefHeight="245.0" prefWidth="498.0" text="Nieuwe Luchthaven" textOverrun="CLIP">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="218.0" prefWidth="493.0">
+               <children>
+                  <HBox alignment="CENTER_LEFT" layoutX="-7.0" layoutY="38.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="41.0" prefWidth="297.0">
+                     <children>
+                        <TextField fx:id="naamTextField" alignment="CENTER_RIGHT" onKeyTyped="#naam" prefHeight="14.0" prefWidth="204.0">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Label text="Naam">
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" layoutX="21.0" layoutY="79.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="41.0" prefWidth="269.0">
+                     <children>
+                        <TextField fx:id="codeTextField" alignment="CENTER_RIGHT" onKeyTyped="#code" prefHeight="31.0" prefWidth="201.0">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Label text="Code">
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" layoutX="14.0" layoutY="127.0" prefHeight="50.0" prefWidth="215.0" spacing="50.0">
+                     <children>
+                        <Label prefHeight="18.0" prefWidth="140.0" text="Werkplaats">
+                           <HBox.margin>
+                              <Insets left="5.0" />
+                           </HBox.margin>
+                        </Label>
+                        <VBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="98.0">
+                           <children>
+                              <RadioButton fx:id="jaRadioButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="74.0" text="Ja">
+                                 <toggleGroup>
+                                    <ToggleGroup fx:id="werkplaats" />
+                                 </toggleGroup>
+                              </RadioButton>
+                              <RadioButton fx:id="neeRadioButton" mnemonicParsing="false" prefHeight="30.0" prefWidth="62.0" text="Nee" toggleGroup="$werkplaats" />
+                           </children>
+                           <HBox.margin>
+                              <Insets />
+                           </HBox.margin>
+                           <padding>
+                              <Insets bottom="5.0" top="5.0" />
+                           </padding>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </children>
+            </AnchorPane>
+        </content>
+      </TitledPane>
+      <HBox layoutX="24.0" layoutY="30.0" prefHeight="33.0" prefWidth="181.0">
+         <children>
+            <Label alignment="CENTER" prefHeight="26.0" prefWidth="46.0" text="Land">
+               <HBox.margin>
+                  <Insets left="5.0" />
+               </HBox.margin>
+            </Label>
+            <ComboBox fx:id="landComboBox" onAction="#landNaam" prefHeight="24.0" prefWidth="122.0">
+               <HBox.margin>
+                  <Insets left="5.0" />
+               </HBox.margin>
+            </ComboBox>
          </children>
       </HBox>
    </children>
