--- a/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/BoekVlucht.fxml
+++ b/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/BoekVlucht.fxml
@@ -1,27 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
 
-<AnchorPane prefHeight="332.0" prefWidth="524.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.userInterfaceLaag.BoekVluchtController">
+<GridPane hgap="20.0" prefHeight="219.0" prefWidth="453.0" vgap="5.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.userInterfaceLaag.BoekVluchtController">
+  <columnConstraints>
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+  </rowConstraints>
    <children>
-      <Label layoutX="46.0" layoutY="39.0" text="Vertrekpunt" />
-      <Label layoutX="43.0" layoutY="81.0" text="Bestemming" />
-      <ComboBox layoutX="150.0" layoutY="34.0" prefHeight="26.0" prefWidth="172.0" />
-      <ComboBox layoutX="150.0" layoutY="76.0" prefHeight="26.0" prefWidth="172.0" />
-      <DatePicker layoutX="151.0" layoutY="119.0" prefHeight="26.0" prefWidth="216.0" />
-      <ComboBox layoutX="392.0" layoutY="119.0" prefHeight="26.0" prefWidth="97.0" />
-      <ComboBox layoutX="152.0" layoutY="159.0" prefHeight="26.0" prefWidth="172.0" />
-      <Spinner layoutX="203.0" layoutY="211.0" prefHeight="26.0" prefWidth="63.0" />
-      <Label layoutX="62.0" layoutY="124.0" text="Vertrek" />
-      <Label layoutX="70.0" layoutY="164.0" text="Label" />
-      <Label layoutX="37.0" layoutY="216.0" text="Aantal stoelen" />
-      <Button layoutX="416.0" layoutY="273.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="94.0" text="Verder" />
-      <Button layoutX="294.0" layoutY="273.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="94.0" text="Annuleren" />
+      <Label text="Vertrekpunt" />
+      <ComboBox fx:id="vetrekVliegveld" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" />
+      <Label text="Bestemming" GridPane.rowIndex="1" />
+      <ComboBox fx:id="aankomstVliegveld" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <Label text="Vertrek" GridPane.rowIndex="2" />
+      <DatePicker fx:id="vertrekDatum" prefHeight="26.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <ComboBox fx:id="vertrekTijd" prefHeight="28.0" prefWidth="88.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+      <Label text="Klas" GridPane.rowIndex="3" />
+      <ComboBox fx:id="klasse" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Label text="Aantal stoelen" GridPane.rowIndex="4" />
+      <Spinner fx:id="stoelen" prefHeight="26.0" prefWidth="63.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="94.0" text="Annuleren" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+      <Button mnemonicParsing="false" prefHeight="35.0" prefWidth="94.0" text="Verder" GridPane.columnIndex="2" GridPane.rowIndex="5" />
    </children>
-</AnchorPane>
+   <padding>
+      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+   </padding>
+</GridPane>
