vertrekVliegveld werkt... soort van

--- a/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/BoekVlucht.fxml
+++ b/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/BoekVlucht.fxml
@@ -27,7 +27,7 @@
   </rowConstraints>
    <children>
       <Label text="Vertrekpunt" />
-      <ComboBox fx:id="vetrekVliegveld" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" />
+      <ComboBox fx:id="vertrekVliegveld" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" />
       <Label text="Bestemming" GridPane.rowIndex="1" />
       <ComboBox fx:id="aankomstVliegveld" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Label text="Vertrek" GridPane.rowIndex="2" />
