--- a/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/BoekVlucht.fxml
+++ b/LuchtvaartMaatschappijSysteem/src/main/userInterfaceLaag/BoekVlucht.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -14,7 +13,6 @@
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -22,22 +20,18 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Label text="Vertrekpunt" />
-      <ComboBox fx:id="vertrekVliegveld" onAction="#vertrek" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" />
+      <ComboBox fx:id="vertrekVliegveld" maxWidth="1.7976931348623157E308" onAction="#vertrek" GridPane.columnIndex="1" />
       <Label text="Bestemming" GridPane.rowIndex="1" />
-      <ComboBox fx:id="aankomstVliegveld" onAction="#bestemming" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      <ComboBox fx:id="aankomstVliegveld" maxWidth="1.7976931348623157E308" onAction="#bestemming" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Label text="Vertrek" GridPane.rowIndex="2" />
-      <DatePicker fx:id="vertrekDatum" prefHeight="26.0" prefWidth="216.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-      <ComboBox fx:id="vertrekTijd" prefHeight="28.0" prefWidth="88.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-      <Label text="Klas" GridPane.rowIndex="3" />
-      <ComboBox fx:id="klasse" prefHeight="26.0" prefWidth="172.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-      <Label text="Aantal stoelen" GridPane.rowIndex="4" />
-      <Spinner fx:id="stoelen" prefHeight="26.0" prefWidth="63.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-      <Button fx:id="buttonCancel" mnemonicParsing="false" onAction="#cancel" prefHeight="35.0" prefWidth="94.0" text="Annuleren" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-      <Button fx:id="buttonOK" mnemonicParsing="false" onAction="#ok" prefHeight="35.0" prefWidth="94.0" text="OK" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+      <ComboBox fx:id="vertrekTijd" maxWidth="1.7976931348623157E308" onAction="#vertrekTijdSelected" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+      <Label text="Aantal stoelen" GridPane.rowIndex="3" />
+      <Spinner fx:id="stoelen" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Button fx:id="buttonCancel" mnemonicParsing="false" onAction="#cancel" prefHeight="35.0" prefWidth="94.0" text="Annuleren" GridPane.rowIndex="4" />
+      <Button fx:id="buttonOK" mnemonicParsing="false" onAction="#ok" prefHeight="35.0" prefWidth="94.0" text="OK" GridPane.columnIndex="1" GridPane.rowIndex="4" />
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
